# VoiceConcierge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Meridian_Voice_Concierge_PRD.docx  README.md  docker-compose.yml
admin/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin/src/: App.tsx  main.tsx  styles.css
admin/src/api/: client.ts  faq.ts  livekitToken.ts  types.ts  unanswered.ts  voiceConfig.ts
admin/src/components/: Layout.tsx
admin/src/pages/: FaqPage.tsx  PlaygroundPage.tsx  UnansweredPage.tsx  VoiceConfigPage.tsx
agent/: Dockerfile  agent.py  backend_client.py  concierge_persona.md  config.py  main.py  prompts.py  pyproject.toml  session.py  voice_mapping.py
backend/: Dockerfile  VoiceConcierge.sln
backend/VoiceConcierge.Api/: Program.cs  VoiceConcierge.Api.csproj  appsettings.json
backend/VoiceConcierge.Api/Common/: BaseController.cs  LogicalLayerElement.cs  ServiceResponse.cs  ServiceResponseStatus.cs
backend/VoiceConcierge.Api/Controllers/: FaqController.cs  LiveKitTokenController.cs  UnansweredController.cs  VoiceConfigController.cs
backend/VoiceConcierge.Api/Middleware/: AgentSecretMiddleware.cs  RequireAgentSecretAttribute.cs
backend/VoiceConcierge.Api/Models/: FaqModel.cs  LiveKitTokenModel.cs  UnansweredQuestionModel.cs  VoiceConfigModel.cs
backend/VoiceConcierge.Api/Options/: AgentAuthOptions.cs  ElevenLabsOptions.cs  LiveKitOptions.cs  OpenAIOptions.cs
backend/VoiceConcierge.Data/: ConciergeDbContext.cs  DesignTimeDbContextFactory.cs  VoiceConcierge.Data.csproj
(+41 files in other folders)
